# re

./: CMakeLists.txt
opencv_1/: CMakeLists.txt  lab1.cpp
